--- a/index.html
+++ b/index.html
@@ -7,10 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment</title>
     <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="two-coloum">
+            <div class="left-border">
+                <h1>Be Happy</h1>
+                <h1> <span>Being You</span> </h1>
+            </div>
+            <p>Infuse your life with action. Don't wait for it to happen. Make it happen. Make your own future. Make
+                your
+                own
+                hope. Make your own love. And whatever your beliefs, honor your creator, not by passively waiting for
+                grace
+                to
+                come down from upon high, but by doing what you can to make grace happen... yourself, right now, right
+                down
+                here
+                on Earth.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/shiftsurge">Explore My Works</a>
+            <p id="Scroll">Scroll down to explore more about us...</p>
+        </div>
+        <div class="two-coloum">
+            <img src="images/image-1.png" alt="A person">
+        </div>
+    </section>
+
+
 
 </body>
 
