--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible">
         <div class="two-coloum">
             <div class="left-border">
-                <h1>Be Happy</h1>
-                <h1> <span>Being You</span> </h1>
+                <h1 class="head-line">Be Happy</h1>
+                <h1 class="head-line"> <span>Being You</span> </h1>
             </div>
             <p>Infuse your life with action. Don't wait for it to happen. Make it happen. Make your own future. Make
                 your
@@ -29,15 +29,44 @@
                 hope. Make your own love. And whatever your beliefs, honor your creator, not by passively waiting for
                 grace
                 to
-                come down from upon high, but by doing what you can to make grace happen... yourself, right now, right
+                come down from upon high, but by doing what you can to make grace happen. yourself, right now, right
                 down
                 here
-                on Earth.</p>
+                on Earth...</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/shiftsurge">Explore My Works</a>
             <p id="Scroll">Scroll down to explore more about us...</p>
         </div>
         <div class="two-coloum">
             <img src="images/image-1.png" alt="A person">
+        </div>
+    </section>
+    <section>
+        <h1 id="centre">Here's Some <span>Motivations</span> </h1>
+        <div class="flexible motivations">
+            <div class="three-coloum Wilson">
+                <img class="image" src="images/Woodrow Wilson.png" alt="Woodrow Wilson.png">
+                <h3> - Woodrow Wilson</h3>
+                <p>You are not here merely to make a living. You are here in order to enable the world to live more
+                    amply,
+                    with greater vision, with a finer spirit of hope and achievement. You are here to enrich the world,
+                    and
+                    you impoverish yourself if you forget the errand.</p>
+            </div>
+            <div class="three-coloum Kael">
+                <img class="image" src="images/Pauline Kael.png" alt="Pauline Kael">
+                <h3> - Pauline Kael</h3>
+                <p>Where there is a will, there is a way. If there is a chance in a million that you can do something,
+                    anything, to keep what you want from ending, do it. Pry the door open or, if need be, wedge your
+                    foot in
+                    that door and keep it open.</p>
+            </div>
+            <div class="three-coloum Herbert">
+                <img class="image" src="images/George Herbert.png" alt="George Herbert">
+                <h3> - George Herbert</h3>
+                <p>Do not wait; the time will never be 'just right.' Start where you stand, and work with whatever tools
+                    you
+                    may have at your command, and better tools will be found as you go along.</p>
+            </div>
         </div>
     </section>
 
