third section added

--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
                 here
                 on Earth...</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/shiftsurge">Explore My Works</a>
-            <p id="Scroll">Scroll down to explore more about us...</p>
+            <p id="Scroll">Scroll down to explore more...</p>
         </div>
         <div class="two-coloum">
             <img src="images/image-1.png" alt="A person">
         </div>
     </section>
+
     <section>
         <h1 id="centre">Here's Some <span>Motivations</span> </h1>
         <div class="flexible motivations">
             <div class="three-coloum Wilson">
-                <img class="image" src="images/Woodrow Wilson.png" alt="Woodrow Wilson.png">
+                <img class="image" src="images/Woodrow Wilson.png" alt="Woodrow Wilson">
                 <h3> - Woodrow Wilson</h3>
                 <p>You are not here merely to make a living. You are here in order to enable the world to live more
                     amply,
@@ -67,6 +68,28 @@
                     you
                     may have at your command, and better tools will be found as you go along.</p>
             </div>
+        </div>
+    </section>
+
+    <section class="flexible express-yourself">
+        <div class="left-side">
+            <img src="images/leadership.png" alt="">
+        </div>
+        <div class="right-side">
+            <h2>4 WAYS TO</h2>
+            <h2>EXPRESS YOURSELF</h2>
+            <p>Are you tired of letting the world dictate what you should or shouldn't do? <br>
+                <br>
+                In 'The Responsible Self', Robert Baird says that learning how to express yourself in a productive way
+                is essential to living an authentic, confident and healthy life.
+                Often we keep our emotions to ourselves because we are fearful of the potential backlash our words or
+                actions might create. But the key is to express yourself in a way that produces a positive result both
+                internally as well as externally.
+                Below are 4 tips to effectively express yourself to improve your mental health, as well as help people
+                around you, understand your point of view.
+            </p>
+            <a class="link-button" target="_blank"
+                href="https://michellealexander.in/blogs/news/4-ways-to-express-yourself">Read The Document</a>
         </div>
     </section>
 
