--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
 
 <body>
     <section class="flexible">
-        <div class="two-coloum">
+        <div class="two-column">
             <div class="left-border">
                 <h1 class="head-line">Be Happy</h1>
                 <h1 class="head-line"> <span>Being You</span> </h1>
@@ -33,10 +33,11 @@
                 down
                 here
                 on Earth...</p>
-            <a class="link-button" target="_blank" href="https://www.facebook.com/shiftsurge">Explore My Works</a>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/shiftsurge">Explore My
+                Works</a>
             <p id="Scroll">Scroll down to explore more...</p>
         </div>
-        <div class="two-coloum">
+        <div class="two-column">
             <img src="images/image-1.png" alt="A person">
         </div>
     </section>
@@ -44,7 +45,7 @@
     <section>
         <h1 id="centre">Here's Some <span>Motivations</span> </h1>
         <div class="flexible motivations">
-            <div class="three-coloum Wilson">
+            <div class="three-column Wilson">
                 <img class="image" src="images/Woodrow Wilson.png" alt="Woodrow Wilson">
                 <h3> - Woodrow Wilson</h3>
                 <p>You are not here merely to make a living. You are here in order to enable the world to live more
@@ -53,7 +54,7 @@
                     and
                     you impoverish yourself if you forget the errand.</p>
             </div>
-            <div class="three-coloum Kael">
+            <div class="three-column Kael">
                 <img class="image" src="images/Pauline Kael.png" alt="Pauline Kael">
                 <h3> - Pauline Kael</h3>
                 <p>Where there is a will, there is a way. If there is a chance in a million that you can do something,
@@ -61,10 +62,10 @@
                     foot in
                     that door and keep it open.</p>
             </div>
-            <div class="three-coloum Herbert">
+            <div class="three-column Herbert">
                 <img class="image" src="images/George Herbert.png" alt="George Herbert">
                 <h3> - George Herbert</h3>
-                <p>Do not wait; the time will never be 'just right.' Start where you stand, and work with whatever tools
+                <p>Do not wait, the time will never be 'just right.' Start where you stand, and work with whatever tools
                     you
                     may have at your command, and better tools will be found as you go along.</p>
             </div>
@@ -89,11 +90,32 @@
                 around you, understand your point of view.
             </p>
             <a class="link-button" target="_blank"
-                href="https://michellealexander.in/blogs/news/4-ways-to-express-yourself">Read The Document</a>
+                href="https://michellealexander.in/blogs/news/4-ways-to-express-yourself">Read The Documentation</a>
         </div>
     </section>
 
-
+    <section class="flexible potential">
+        <div class="two-column">
+            <h2>Explore Your Real Potential</h2>
+            <p>We all think that we know our limits. We know what we're good at and we work towards improving ourselves
+                in the set direction. We set goals that will bring us closer to our definition of success, or else, the
+                end journey. <br>What if you've tested your limits even beyond reaching the dead end to explore
+                different paths? <br> Everything starts with your mindset. You are what you think. That's why we are all
+                responsible for limiting ourselves to what we can imagine as a definition of success. Or even worse, we
+                are limiting ourselves to what it's easier to be achieved. This way, we still feel successful and enjoy
+                the benefits of it.</p>
+            <a class="link-button" target="_blank"
+                href="https://medium.com/swlh/how-to-explore-your-real-potential-by-testing-your-limits-ce56af6bfcf9">Read
+                The Documentation</a>
+        </div>
+        <div class="two-column limit-img">
+            <img src="images/your  limits.jpg" alt="">
+        </div>
+    </section>
+    <footer>
+        <p id="upper-footer">Every thing is possible,<span> If You Are Awaken</span> </p>
+        <p id="lower-footer">Take Time Offline, It Matters</p>
+    </footer>
 
 </body>
 
