--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <section class="flexible">
         <div class="two-column">
             <div class="left-border">
-                <h1 class="head-line">Be Happy</h1>
-                <h1 class="head-line"> <span>Being You</span> </h1>
+                <h1 class="head-line">What's Meant For You</h1>
+                <h1 class="head-line"> <span>Will Find You</span> </h1>
             </div>
             <p>Infuse your life with action. Don't wait for it to happen. Make it happen. Make your own future. Make
                 your
@@ -79,9 +79,8 @@
         <div class="right-side">
             <h2>4 WAYS TO</h2>
             <h2>EXPRESS YOURSELF</h2>
-            <p>Are you tired of letting the world dictate what you should or shouldn't do? <br>
-                <br>
-                In 'The Responsible Self', Robert Baird says that learning how to express yourself in a productive way
+            <h4>Are you tired of letting the world dictate what you should or shouldn't do?</h4>
+            <p>In 'The Responsible Self', Robert Baird says that learning how to express yourself in a productive way
                 is essential to living an authentic, confident and healthy life.
                 Often we keep our emotions to ourselves because we are fearful of the potential backlash our words or
                 actions might create. But the key is to express yourself in a way that produces a positive result both
@@ -110,6 +109,24 @@
         </div>
         <div class="two-column limit-img">
             <img src="images/your  limits.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="flexible">
+        <div class="corona corona-left">
+            <img src="images/app.png" alt="">
+        </div>
+        <div class="corona corona-right">
+            <h2>Connecting the world to combat <span>coronavirus</span> </h2>
+            <p>To unite the world in the fight against coronavirus, WHO is bringing together a wide array of partners on
+                a series of engaging initiatives to motivate and mobilize people to Be Ready to beat COVID-19, and to
+                support the COVID-19 Solidarity Response Fund.
+
+                Musicians, footballers, athletes and artists will help you stay connected and healthy through shows of
+                solidarity, lifesaving health messages and entertainment during lockdown.
+
+                Click on the campaigns below to learn how you can spread the word and help increase solidarity,
+                awareness and funds to support the global response against COVID-19.</p>
         </div>
     </section>
     <footer>
