oh i missed something &....Done

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 down
                 here
                 on Earth...</p>
-            <a class="link-button" target="_blank" href="https://www.facebook.com/shiftsurge">Explore My
-                Works</a>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/shiftsurge">Explore</a>
             <p id="Scroll">Scroll down to explore more...</p>
         </div>
         <div class="two-column">
@@ -117,7 +116,7 @@
             <img src="images/app.png" alt="">
         </div>
         <div class="corona corona-right">
-            <h2>Connecting the world to combat <span>coronavirus</span> </h2>
+            <h2>Connecting the world to combat <span>corona</span>virus </h2>
             <p>To unite the world in the fight against coronavirus, WHO is bringing together a wide array of partners on
                 a series of engaging initiatives to motivate and mobilize people to Be Ready to beat COVID-19, and to
                 support the COVID-19 Solidarity Response Fund.
@@ -127,6 +126,8 @@
 
                 Click on the campaigns below to learn how you can spread the word and help increase solidarity,
                 awareness and funds to support the global response against COVID-19.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.who.int/campaigns/connecting-the-world-to-combat-coronavirus">Features</a>
         </div>
     </section>
     <footer>
